--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.14.4",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.8",
+    "hirer": "file:",
     "keen-slider": "^6.8.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
