--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@motionone/utils": "^10.17.0",
+    "@mui/icons-material": "^6.4.7",
     "@mui/material": "^5.14.4",
     "axios": "^1.7.4",
     "framer-motion": "^11.0.8",
